traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                                    if(estFaceMur()){droite();return true}
                                                                     ^Snake:4: warning: enclosing method murNord has result type Unit: return value discarded
                                    if(estFaceMur()){droite();return true}
                                                              ^Snake:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                                      if (estFaceMur()){gauche();return true}
                                                                        ^Snake:7: warning: enclosing method murNord has result type Unit: return value discarded
                                      if (estFaceMur()){gauche();return true}
                                                                 ^Snake:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^Snake:9: warning: enclosing method murNord has result type Unit: return value discarded
  return false
  ^Snake:13: error: type mismatch;
 found   : Unit
 required: Boolean
  if(estFaceMur() && murNord()){return true}
                            ^Snake:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  if(estFaceMur() && murNord()){return true}
                                       ^Snake:13: warning: enclosing method estPosiFin has result type Unit: return value discarded
  if(estFaceMur() && murNord()){return true}
                                ^Snake:14: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false}
         ^Snake:14: warning: enclosing method estPosiFin has result type Unit: return value discarded
  return false}
  ^Snake:20: error: value unary_! is not a member of Unit
    }while(!estPosiFin())
           ^